api integration and expand animation

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
                         <p id="explanation">Sou desenvolvedor, tenho experiência no front-end e no back-end, demonstrada nos projetos pessoais.</p>
                         <h4>Clique em Projetos para ver mais projetos e seus detalhes.</h4>
                     </div>
-                    <div id="tecnologies-container">
+                    <div id="technologies-container">
                         <h3>Tecnologias conhecidas</h3>
-                        <div id="tecnologies"></div>
+                        <div id="technologies"></div>
                     </div>
                 </div>
                 <div class="projects-section">
@@ -42,6 +42,11 @@
         <div id="show_projects">
             <div class="project-header">
                 <img id="left-arrow" class="icon" src="images/left-arrow.png" alt="">
+                <div class="project-header-title">
+                    <h1>Projetos</h1>
+                    <h6>Clique nos projetos, para ver mais.</h6>
+                </div>
+                <span></span>
             </div>
             <div class="projects-list">
                 <div class="loading-container">
