--- a/index.html
+++ b/index.html
@@ -8,53 +8,53 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header>
-        <div class="social-media-icons">
-            <a href="https://api.whatsapp.com/send?phone=5511942756379"><img class="icon" src="./images/whatsapp.png" alt=""></a>
-            <a href="https://github.com/sadmagrage"><img class="icon" src="./images/github.png" alt=""></a>
-            <a href="https://www.linkedin.com/in/victor-goya-9802ba24b/"><img class="icon" src="./images/linkedin.png" alt=""></a>
-            <a href="mailto:victorgoyapvgp12@gmail.com"><img class="icon white-background" src="./images/email.png" alt=""></a>
-        </div>
-    </header>
-    <main id="inicio">
-        <div class="content">
-            <div class="intro-project-section">
-                <div class="intro-section">
-                    <div class="presentation">
-                        <h1>Oi</h1>
-                        <h4 id="identity"></h4>
-                        <p id="explanation">Sou desenvolvedor, tenho experiência no front-end e no back-end, demonstrada nos projetos pessoais.</p>
-                        <h4>Clique em Projetos para ver mais projetos e seus detalhes.</h4>
+    <div class="loading-screen">
+        <h3>Loading</h3>
+        <img style="width: 50px; height: 50px;" src="./images/loading-gif.gif" alt="">
+    </div>
+    <div class="full-page disable">
+        <header>
+            <div class="social-media-icons">
+                <a href="https://api.whatsapp.com/send?phone=5511942756379"><img class="icon" src="./images/whatsapp.png" alt=""></a>
+                <a href="https://github.com/sadmagrage"><img class="icon" src="./images/github.png" alt=""></a>
+                <a href="https://www.linkedin.com/in/victor-goya-9802ba24b/"><img class="icon" src="./images/linkedin.png" alt=""></a>
+                <a href="mailto:victorgoyapvgp12@gmail.com"><img class="icon white-background" src="./images/email.png" alt=""></a>
+            </div>
+        </header>
+        <main id="inicio">
+            <div class="content">
+                <div class="intro-project-section">
+                    <div class="intro-section">
+                        <div class="presentation">
+                            <h1>Oi</h1>
+                            <h4 id="identity"></h4>
+                            <p id="explanation">Sou desenvolvedor, tenho experiência no front-end e no back-end, demonstrada nos projetos pessoais.</p>
+                            <h4>Clique em Projetos para ver mais projetos e seus detalhes.</h4>
+                        </div>
+                        <div id="technologies-container">
+                            <h3>Tecnologias conhecidas</h3>
+                            <div id="technologies"></div>
+                        </div>
                     </div>
-                    <div id="technologies-container">
-                        <h3>Tecnologias conhecidas</h3>
-                        <div id="technologies"></div>
-                    </div>
-                </div>
-                <div class="projects-section">
-                    <h3 id="projetos-title">Projetos</h3>
-                    <div class="loading-container loading-project-section">
-                        <img class="loading-icon" src="./images/loading-gif.gif" alt="">
+                    <div class="projects-section">
+                        <h3 id="projetos-title">Projetos</h3>
                     </div>
                 </div>
             </div>
-        </div>
-        <div id="show_projects">
-            <div class="project-header">
-                <img id="left-arrow" class="icon" src="images/left-arrow.png" alt="">
-                <div class="project-header-title">
-                    <h1>Projetos</h1>
-                    <h6>Clique nos projetos, para ver mais.</h6>
+            <div id="show_projects">
+                <div class="project-header">
+                    <img id="left-arrow" class="icon" src="images/left-arrow.png" alt="">
+                    <div class="project-header-title">
+                        <h1>Projetos</h1>
+                        <h6>Clique nos projetos, para ver mais.</h6>
+                    </div>
+                    <span></span>
                 </div>
-                <span></span>
-            </div>
-            <div class="projects-list">
-                <div class="loading-container">
-                    <img class="loading-icon" src="./images/loading-gif.gif" alt="">
+                <div class="projects-list">
                 </div>
             </div>
-        </div>
-    </main>
+        </main>
+    </div>
     <script type="module" src="./js/script.js"></script>
 </body>
 </html>
