new message in loading-screen

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 <body>
     <div class="loading-screen">
-        <h3>Loading</h3>
-        <img style="width: 50px; height: 50px;" src="./images/loading-gif.gif" alt="">
+        <h3>Carregando dados</h3>
+        <img id="loading-image" src="./images/loading-gif.gif" alt="">
+        <h6>Não é um loading infinito ...</h6>
     </div>
     <div class="full-page disable">
         <header>
